fix: center hero first section on small screens

--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -108,8 +108,11 @@
     }
 
     &__first {
-        margin: 0 auto;
         max-width: 60rem;
+
+        @media screen and (max-width: 1100px) {
+            margin: 0 auto;
+        }
     }
 
     &__second {
